@@ -20,6 +20,7 @@
 - FIX: Retrieve after resolve task fails because of wrong resolve configuration (IVYDE-140) (thanks to Daniel Becheanu)
 - FIX: Conversion from "file:" to "project:" fails (IVYDE-143) (thanks to Will Gorman)
 - FIX: The decorators can throw a NPE at startup (IVYDE-133)
+- FIX: Changing any setting for the classpath container loses the "exported" setting of the classpath container (IVYDE-149)
 
   version 2.0.0 beta1
 ==========================
